--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/content_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/app_bar_main"
-    tools:context="com.sjj.echo.umsinterface.FrameActivity">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_weight="1"
@@ -74,18 +69,21 @@
             android:layout_height="0dp"
             android:layout_weight="2"
             />
-        <TextView
+        <CheckBox
             android:layout_weight="1"
+            android:id="@+id/ums_config_check"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="bottom"
+            android:gravity="center_vertical"
             android:text = "@string/ums_config_path_tip"
             />
         <LinearLayout
+            android:id="@+id/ums_config_group"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:orientation="horizontal"
             android:paddingLeft="3dp"
+            android:visibility="invisible"
             android:gravity="right"
             >
             <EditText
@@ -108,13 +106,13 @@
                     android:gravity="center"
                     android:layout_gravity="center"
                     android:text="@string/ums_select_btn_tip"/>
-                <Button
-                    android:id="@+id/config_search_btn"
-                    android:layout_width="80dp"
-                    android:layout_height="40dp"
-                    android:gravity="center"
-                    android:layout_gravity="center"
-                    android:text="@string/ums_search_btn_tip"/>
+                <!--<Button-->
+                    <!--android:id="@+id/config_search_btn"-->
+                    <!--android:layout_width="80dp"-->
+                    <!--android:layout_height="40dp"-->
+                    <!--android:gravity="center"-->
+                    <!--android:layout_gravity="center"-->
+                    <!--android:text="@string/ums_search_btn_tip"/>-->
             </LinearLayout>
         </LinearLayout>
         <LinearLayout
@@ -122,7 +120,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:orientation="horizontal"
-            android:gravity="right|center_vertical"
+            android:gravity="center_vertical"
             >
             <CheckBox
                 android:id="@+id/readonly"
