--- a/app/src/main/res/layout/activity_add_mount_activitry.xml
+++ b/app/src/main/res/layout/activity_add_mount_activitry.xml
@@ -262,7 +262,10 @@
                 <CheckBox android:checked="true" android:id="@+id/check_other_execute"/>
             </TableRow>
         </TableLayout>
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/mount_namespace_tip"/>
         <android.support.v4.widget.Space
             android:layout_width="match_parent"
             android:layout_height="0dp"
