fix wrong status tip

--- a/app/src/main/res/layout/activity_new_image.xml
+++ b/app/src/main/res/layout/activity_new_image.xml
@@ -37,7 +37,7 @@
                 android:hint="@string/ums_edit_hint"
                 android:layout_width="wrap_content"
                 android:layout_weight="1"
-                android:text="/sdcard"
+                android:text="/sdcard/ums_img"
                 android:layout_height="70dp"
                 android:layout_gravity="center_vertical"
                 />
@@ -79,6 +79,7 @@
                 android:layout_width="wrap_content"
                 android:layout_weight="1"
                 android:layout_height="70dp"
+                android:text="default.img"
                 android:layout_gravity="center_vertical"
                 />
             <Button
